--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,17 @@
 
     <link rel="icon" href="{{ '/favicon.png' | relative_url }}">
     <link href="{{ '/assets/css/style.css' | relative_url }}" rel="stylesheet">
+
+    {% if page.is_map %}
+      <link rel="stylesheet" type="text/css" href="assets/css/landfills.css" />
+      <link rel='stylesheet' type="text/css" href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' />
+      <link rel="stylesheet" type="text/css" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" />
+
+      <script async src="assets/js/landfills.js"></script>
+      <script src='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js'></script>
+      <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+    {% endif %}
+
   </head>
   <body class="page {{page.bodyClass}}">
     {% include mobile-menu.html %}
