--- a/assets/css/landfills.css
+++ b/assets/css/landfills.css
@@ -1,11 +1,11 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
-}
+} */
 
-#map-container {
+/* #map-container {
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: auto;
   overflow: hidden;
 }
@@ -16,16 +16,16 @@ body {
   bottom: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 .mapboxgl-popup {
   max-width: 250px;
   font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
-.map-overlay {
+/* .map-overlay {
   position: absolute;
-  /* width: 25%; */
+  width: 25%;
   top: 0;
   bottom: 0;
   left: 0;
@@ -75,4 +75,4 @@ body {
 
 .map-overlay .listing a:hover {
   background: #f0f0f0;
-}
+} */
